fixed the header to flex and overlap on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,8 @@ html {
 .nav {
   background-color: unset;
   overflow: auto;
-  justify-content: end;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
 
 /* Increasing header font size */
